--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": ">=16.14.8",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0",
-    "reactflow": "^11.7.4"
+    "@fortawesome/fontawesome-svg-core": "~1 || ~6",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react": "18.2.14",
+    "react": "18.2.0",
+    "react-bootstrap": "2.8.0",
+    "react-dom": "18.2.0",
+    "reactflow": "11.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
