--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "~1 || ~6",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@popperjs/core": "^2.11.7",
     "@types/react": "18.2.14",
+    "bootstrap": "^5.3.0",
     "react": "18.2.0",
     "react-bootstrap": "2.8.0",
     "react-dom": "18.2.0",
