--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.4.0",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@popperjs/core": "^2.11.7",
+    "@popperjs/core": "2.11.8",
     "@types/react": "18.2.14",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "5.3.0",
+    "mobile-drag-drop": "2.2.0",
     "react": "18.2.0",
     "react-bootstrap": "2.8.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.1",
     "reactflow": "11.7.4"
   },
   "scripts": {
