--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@popperjs/core": "2.11.8",
     "@types/react": "18.2.14",
     "bootstrap": "5.3.0",
+    "express": "^4.18.2",
     "mobile-drag-drop": "2.2.0",
     "react": "18.2.0",
     "react-bootstrap": "2.8.0",
@@ -22,6 +23,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "react-scripts": "latest"
   },
   "browserslist": {
